@@ -119,8 +119,15 @@ namespace libtorrent
 	void web_peer_connection::disconnect(error_code const& ec, int error)
 	{
 		boost::shared_ptr<torrent> t = associated_torrent().lock();
+
+		if (t && m_block_pos)
+			t->add_redundant_bytes(m_block_pos);
+
 		peer_connection::disconnect(ec, error);
-		if (t) t->disconnect_web_seed(this);
+		if (t)
+		{
+			t->disconnect_web_seed(this);
+		}
 	}
 	
 	boost::optional<piece_block_progress>
@@ -135,7 +142,7 @@ namespace libtorrent
 		piece_block_progress ret;
 
 		ret.piece_index = m_requests.front().piece;
-		ret.bytes_downloaded = m_block_pos;
+		ret.bytes_downloaded = m_block_pos % t->block_size();
 		if (m_block_pos)
 			ret.block_index = (m_requests.front().start + m_block_pos - 1) / t->block_size();
 		else
@@ -547,18 +554,22 @@ namespace libtorrent
 			peer_request front_request = m_requests.front();
 
 			TORRENT_ASSERT(m_block_pos >= 0);
-			if (m_block_pos + payload_transferred > front_request.length)
-				payload_transferred = front_request.length - m_block_pos;
 
+#ifdef TORRENT_VERBOSE_LOGGING
+			(*m_logger) << "*** payload_transferred: " << payload_transferred
+				<< " [" << front_request.piece << ":" << front_request.start
+				<< " = " << front_request.length <<  "]\n";
+#endif
 			m_statistics.received_bytes(payload_transferred, 0);
-			incoming_piece_fragment(payload_transferred);
 			bytes_transferred -= payload_transferred;
 			m_range_pos += payload_transferred;
 			m_block_pos += payload_transferred;
 			if (m_range_pos > range_end - range_start) m_range_pos = range_end - range_start;
 
-//			std::cerr << "REQUESTS: m_requests: " << m_requests.size()
-//				<< " file_requests: " << m_file_requests.size() << std::endl;
+#if 0
+			std::cerr << "REQUESTS: m_requests: " << m_requests.size()
+				<< " file_requests: " << m_file_requests.size() << std::endl;
+#endif
 
 			int file_index = m_file_requests.front();
 			peer_request in_range = info.orig_files().map_file(file_index, range_start
@@ -567,13 +578,13 @@ namespace libtorrent
 			size_type rs = size_type(in_range.piece) * info.piece_length() + in_range.start;
 			size_type re = rs + in_range.length;
 			size_type fs = size_type(front_request.piece) * info.piece_length() + front_request.start;
-/*
+#if 0
 			size_type fe = fs + front_request.length;
 
 			std::cerr << "RANGE: r = (" << rs << ", " << re << " ) "
 				"f = (" << fs << ", " << fe << ") "
 				"file_index = " << file_index << " received_body = " << m_received_body << std::endl;
-*/
+#endif
 
 			// the http response body consists of 3 parts
 			// 1. the middle of a block or the ending of a block
@@ -585,6 +596,8 @@ namespace libtorrent
 
 			if (!range_overlaps_request)
 			{
+				incoming_piece_fragment((std::min)(payload_transferred
+					, front_request.length - m_block_pos));
 				m_statistics.received_bytes(0, bytes_transferred);
 				// this means the end of the incoming request ends _before_ the
 				// first expected byte (fs + m_piece.size())
@@ -616,6 +629,7 @@ namespace libtorrent
 				m_body_start += copy_size;
 				TORRENT_ASSERT(m_received_body <= range_end - range_start);
 				TORRENT_ASSERT(int(m_piece.size()) <= front_request.length);
+				incoming_piece_fragment(copy_size);
 				if (int(m_piece.size()) == front_request.length)
 				{
 					// each call to incoming_piece() may result in us becoming
@@ -626,8 +640,7 @@ namespace libtorrent
 					incoming_piece(front_request, &m_piece[0]);
 					m_requests.pop_front();
 					if (associated_torrent().expired()) return;
-					TORRENT_ASSERT(m_block_pos == front_request.length);
-					m_block_pos = 0;
+					m_block_pos -= front_request.length;
 					cut_receive_buffer(m_body_start, t->block_size() + 1024);
 					m_body_start = 0;
 					recv_buffer = receive_buffer();
@@ -645,11 +658,11 @@ namespace libtorrent
 				peer_request r = m_requests.front();
 				TORRENT_ASSERT(recv_buffer.left() >= r.length);
 
+				incoming_piece_fragment(r.length);
 				incoming_piece(r, recv_buffer.begin);
 				m_requests.pop_front();
 				if (associated_torrent().expired()) return;
-				TORRENT_ASSERT(m_block_pos == front_request.length);
-				m_block_pos = 0;
+				m_block_pos -= r.length;
 				m_received_body += r.length;
 				TORRENT_ASSERT(receive_buffer().begin + m_body_start == recv_buffer.begin);
 				TORRENT_ASSERT(m_received_body <= range_end - range_start);
@@ -695,6 +708,7 @@ namespace libtorrent
 				continue;
 			}
 			if (bytes_transferred == 0) break;
+			TORRENT_ASSERT(payload_transferred > 0);
 		}
 		TORRENT_ASSERT(bytes_transferred == 0);
 	}
